fixed bug in feedback widget modal bg overlay display caused by residual css fix to accommodate previous (wrapping, bad) method of including the page background image and gradient

--- a/app/webroot/css/thermal-age.css
+++ b/app/webroot/css/thermal-age.css
@@ -839,12 +839,6 @@ div.moodSlider.ui-slider-horizontal .sliderLabelInternal {
     color: #fafafa;
 }
 
-
-/* stop overlay from scrolling */
-.ui-widget-overlay {
-    position: static;
-}
-
 .expand-embeds .embed-svg{
     margin: 0px;
     width: auto;
